@@ -177,7 +177,7 @@ public class TestDAG {
     // set invalid DAG level configuration
     try {
       v1.setConf(TezConfiguration.TEZ_AM_COMMIT_ALL_OUTPUTS_ON_DAG_SUCCESS, false + "");
-      Assert.fail();
+      Assert.fail("should fail due to invalid configuration set");
     } catch (IllegalStateException e) {
       Assert.assertEquals("tez.am.commit-all-outputs-on-dag-success is set at the scope of VERTEX,"
           + " but it is only valid in the scope of DAG",
@@ -185,5 +185,120 @@ public class TestDAG {
     }
     // set valid Vertex level configuration
     v1.setConf(TezConfiguration.TEZ_AM_TASK_MAX_FAILED_ATTEMPTS, 3 + "");
+  }
+
+  @Test(timeout = 5000)
+  public void testDuplicatedInput() {
+    Vertex v1 = Vertex.create("v1", ProcessorDescriptor.create("dummyProcessor"));
+    DataSourceDescriptor dataSource =
+        DataSourceDescriptor.create(InputDescriptor.create("dummyInput"), null, null);
+    try {
+      v1.addDataSource(null, dataSource);
+      Assert.fail("Should fail due to invalid inputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("InputName should not be null, empty or white space only,"));
+    }
+    try {
+      v1.addDataSource("", dataSource);
+      Assert.fail("Should fail due to invalid inputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("InputName should not be null, empty or white space only,"));
+    }
+    try {
+      v1.addDataSource(" ", dataSource);
+      Assert.fail("Should fail due to invalid inputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("InputName should not be null, empty or white space only,"));
+    }
+
+    v1.addDataSource("input_1", dataSource);
+    try {
+      v1.addDataSource("input_1",
+          DataSourceDescriptor.create(InputDescriptor.create("dummyInput"), null, null));
+      Assert.fail("Should fail due to duplicated input");
+    } catch (IllegalArgumentException e) {
+      Assert.assertEquals("Duplicated input:input_1, vertexName=v1", e.getMessage());
+    }
+  }
+
+  @Test(timeout = 5000)
+  public void testDuplicatedOutput_1() {
+    Vertex v1 = Vertex.create("v1", ProcessorDescriptor.create("dummyProcessor"));
+    DataSinkDescriptor dataSink =
+        DataSinkDescriptor.create(OutputDescriptor.create("dummyOutput"), null, null);
+    try {
+      v1.addDataSink(null, dataSink);
+      Assert.fail("Should fail due to invalid outputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("OutputName should not be null, empty or white space only,"));
+    }
+    try {
+      v1.addDataSink("", dataSink);
+      Assert.fail("Should fail due to invalid outputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("OutputName should not be null, empty or white space only,"));
+    }
+    try {
+      v1.addDataSink(" ", dataSink);
+      Assert.fail("Should fail due to invalid outputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("OutputName should not be null, empty or white space only,"));
+    }
+
+    v1.addDataSink("output_1",
+        DataSinkDescriptor.create(OutputDescriptor.create("dummyOutput"), null, null));
+    try {
+      v1.addDataSink("output_1",
+          DataSinkDescriptor.create(OutputDescriptor.create("dummyOutput"), null, null));
+      Assert.fail("Should fail due to duplicated output");
+    } catch (IllegalArgumentException e) {
+      Assert.assertEquals("Duplicated output:output_1, vertexName=v1", e.getMessage());
+    }
+  }
+
+  @Test(timeout = 5000)
+  public void testDuplicatedOutput_2() {
+    DAG dag = DAG.create("dag1");
+    Vertex v1 = Vertex.create("v1", ProcessorDescriptor.create("dummyProcessor"));
+    DataSinkDescriptor dataSink =
+        DataSinkDescriptor.create(OutputDescriptor.create("dummyOutput"), null, null);
+    try {
+      v1.addDataSink(null, dataSink);
+      Assert.fail("Should fail due to invalid outputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("OutputName should not be null, empty or white space only,"));
+    }
+    try {
+      v1.addDataSink("", dataSink);
+      Assert.fail("Should fail due to invalid outputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("OutputName should not be null, empty or white space only,"));
+    }
+    try {
+      v1.addDataSink(" ", dataSink);
+      Assert.fail("Should fail due to invalid outputName");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue(e.getMessage()
+          .contains("OutputName should not be null, empty or white space only,"));
+    }
+
+    v1.addDataSink("output_1", dataSink);
+    Vertex v2 = Vertex.create("v1", ProcessorDescriptor.create("dummyProcessor"));
+    VertexGroup vGroup = dag.createVertexGroup("group_1", v1,v2);
+    try {
+      vGroup.addDataSink("output_1",
+          DataSinkDescriptor.create(OutputDescriptor.create("dummyOutput"), null, null));
+      Assert.fail("Should fail due to duplicated output");
+    } catch (IllegalArgumentException e) {
+      Assert.assertEquals("Duplicated output:output_1, vertexName=v1", e.getMessage());
+    }
   }
 }
