@@ -249,6 +249,7 @@ TEZ-UI CHANGES (TEZ-8):
 Release 0.5.4: Unreleased
 
 ALL CHANGES:
+  TEZ-2219. Should verify the input_name/output_name to be unique per vertex
   TEZ-2186. OOM with a simple scatter gather job with re-use
   TEZ-2220. TestTezJobs compile failure in branch 0.5.
   TEZ-2199. updateLocalResourcesForInputSplits assumes wrongly that split data is on same FS as the default FS.
